<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ImcActivity">

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_more_vert" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/TextViewForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imc_desc" />


            <TextView
                style="@style/TextViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imc_subtitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_weight"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imc_weight_hint" />

            <EditText
                android:id="@+id/edit_height"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imc_height_hint" />

            <Button
                android:id="@+id/btn_calc"
                style="@style/ButtonCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_main"

                />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>