<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TmbActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/search_tmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_more_vert" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">


            <TextView
                style="@style/TextViewForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/tmb_desc" />


            <TextView
                style="@style/TextViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmb_subtitle"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edit_tmb_weight"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imc_weight_hint" />

            <EditText
                android:id="@+id/edit_tmb_height"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imc_height_hint" />


            <EditText
                android:id="@+id/edit_tmb_age"
                style="@style/EditTextForm"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_hint" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/teste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Sexo: "
                    android:textSize="20sp"

                    />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/r1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="Masculino"
                        android:checked="true"
                        />

                    <RadioButton
                        android:id="@+id/r2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Feminino" />

                </RadioGroup>


            </LinearLayout>


            <Spinner
                android:id="@+id/spinner_tmb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:entries="@array/spinner_tmb" />

            <Button
                android:id="@+id/btn_calc_tmb"
                style="@style/ButtonCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_main" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>